--- a/Pages/Projects/AutoBill.cshtml
+++ b/Pages/Projects/AutoBill.cshtml
@@ -279,6 +279,16 @@
             </div>
 
         </div>
+        <hr class="my-4" />
+        <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
+            <div class="d-flex align-items-center gap-2 mt-4">
+                <a asp-page="/Skills/Csharp" class="btn btn-secondary" style="width: 150px">C#</a>
+                <a asp-page="/Skills/Dotnet" class="btn btn-secondary" style="width: 150px">.NET</a>
+                <a asp-page="/Skills/SQL" class="btn btn-secondary" style="width: 150px">SQL</a>
+                <a asp-page="/Skills/Docker" class="btn btn-secondary" style="width: 150px">Docker</a>
+
+            </div>
+        </div>
     </div>
 </section>
 
