--- a/Pages/Projects/Backoffice.cshtml
+++ b/Pages/Projects/Backoffice.cshtml
@@ -13,7 +13,7 @@
                     Cowork-Link — Réalisations clés
                 </h2>
                 <p class="text-muted mb-0">
-                    Refonte progressive d’un écosystème CRM dédié à la domiciliation d’entreprises en France, avec coexistence legacy/prod et nouvelle version en développement puis migration client à partir du printemps 2025. Stabilisation des parcours critiques (contrats, facturation, devis, support, KYC/AML TRACFIN, messagerie et relances), optimisation SQL (requêtes, indexation, diagnostics), modernisation des composants Telerik et mise en place de bases d’APIs internes. Mise en œuvre d’une nouvelle architecture data structurée autour d’une base commune et de bases dédiées par client, incluant une base historisée, afin d’améliorer la cohérence, la traçabilité et l’UX.
+                    Refonte progressive d’un écosystème CRM dédié à la domiciliation d’entreprises en France, avec coexistence legacy/prod et nouvelle version en développement puis migration client à partir du printemps 2025. 
                 </p>
             </div>
         </div>
@@ -189,6 +189,7 @@
     </div>
     <hr class="my-4" />
 
+
     <div class="mt-4">
         <div class="row row-cols-1 row-cols-md-3 g-4 mt-1 justify-content-center">
             <div class="col">
@@ -359,6 +360,19 @@
 
         </div>
     </div>
+    <hr class="my-4" />
+    <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
+        <div class="d-flex align-items-center gap-2 mt-4">
+            <a asp-page="/Skills/Csharp" class="btn btn-secondary" style="width: 150px">C#</a>
+            <a asp-page="/Skills/SQL" class="btn btn-secondary" style="width: 150px">SQL</a>
+            <a asp-page="/Skills/Dotnet" class="btn btn-secondary" style="width: 150px">.NET</a>
+            <a asp-page="/Skills/Tracfin" class="btn btn-secondary" style="width: 150px">Compliance</a>
+            <a asp-page="/Skills/Com" class="btn btn-secondary" style="width: 150px">Communication</a>
+            <a asp-page="/Skills/Agile" class="btn btn-secondary" style="width: 150px">Agile</a>
+
+        </div>
+    </div>
+
 </section>
 
 <div id="achievementBodies" class="d-none">
