--- a/Pages/Projects/Impaye.cshtml
+++ b/Pages/Projects/Impaye.cshtml
@@ -12,7 +12,7 @@
                     Module Impayé — Réalisations clés
                 </h2>
                 <p class="text-muted mb-0">
-                    Conception d’un projet standalone orienté traitement de données clients, visant à détecter et gérer les impayés sur des échéances de paiement. Développement d’une logique de consolidation des statuts et d’analyse des retards en C++, couplée à une base SQL pour stocker les clients, paiements, échéanciers et historiques. Mise en place de requêtes structurées pour calculer les retards, suivre l’évolution des statuts et produire des extractions exploitables (suivi, reporting), avec un focus sur la robustesse des règles et l’efficacité du traitement sur des volumes importants.
+                    Conception d’un projet standalone orienté traitement de données clients, visant à détecter et gérer les impayés sur des échéances de paiement.
                 </p>
             </div>
         </div>
@@ -355,6 +355,16 @@
                 </button>
             </div>
 
+        </div>
+        <hr class="my-4" />
+        <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
+            <div class="d-flex align-items-center gap-2 mt-4">
+                <a asp-page="/Skills/Cpp" class="btn btn-secondary" style="width: 150px">C++</a>
+                <a asp-page="/Skills/SQL" class="btn btn-secondary" style="width: 150px">SQL</a>
+                <a asp-page="/Skills/Docker" class="btn btn-secondary" style="width: 150px">Docker</a>
+                <a asp-page="/Skills/Com" class="btn btn-secondary" style="width: 150px">Communication</a>
+
+            </div>
         </div>
     </div>
 </section>
