--- a/Pages/Projects/Kyc.cshtml
+++ b/Pages/Projects/Kyc.cshtml
@@ -12,7 +12,7 @@
                     Module KYC / TRACFIN — Réalisations clés
                 </h2>
                 <p class="text-muted mb-0">
-                    Conception d’un module KYC / TRACFIN intégré à un CRM de domiciliation d’entreprises en France, visant à fiabiliser la conformité documentaire et le suivi des dossiers clients. Développement d’une logique de consolidation des statuts KYC et de contrôle de complétude en .NET, couplée à SQL Server pour stocker les informations clients, les pièces justificatives, l’historique des statuts et les événements métier. Mise en place de règles structurées pour valider la cohérence des transitions, tracer les décisions via logs/audit, et produire des vues exploitables par les équipes opérationnelles (suivi, support, conformité), avec un focus sur la robustesse du workflow, la traçabilité et la stabilité en production.
+                    Conception d’un module KYC / TRACFIN intégré à un CRM de domiciliation d’entreprises en France, visant à fiabiliser la conformité documentaire et le suivi des dossiers clients. 
                 </p>
             </div>
         </div>
@@ -356,6 +356,18 @@
                 </button>
             </div>
 
+        </div>
+        <hr class="my-4" />
+        <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
+            <div class="d-flex align-items-center gap-2 mt-4">
+                <a asp-page="/Skills/Csharp" class="btn btn-secondary" style="width: 150px">C#</a>
+                <a asp-page="/Skills/SQL" class="btn btn-secondary" style="width: 150px">SQL</a>
+                <a asp-page="/Skills/Dotnet" class="btn btn-secondary" style="width: 150px">.NET</a>
+                <a asp-page="/Skills/Tracfin" class="btn btn-secondary" style="width: 150px">Compliance</a>
+                <a asp-page="/Skills/Com" class="btn btn-secondary" style="width: 150px">Communication</a>
+                <a asp-page="/Skills/Agile" class="btn btn-secondary" style="width: 150px">Agile</a>
+
+            </div>
         </div>
     </div>
 </section>
