--- a/Pages/Skills/Finance.cshtml
+++ b/Pages/Skills/Finance.cshtml
@@ -216,7 +216,7 @@
                         Cependant, la finance est un domaine immense et il me reste encore beaucoup à approfondir, notamment sur les sujets les plus avancés : microstructure, modèles plus complexes, XVA, et la dimension “front-office” à haute intensité. C’est un apprentissage continu, car chaque niveau de profondeur apporte une meilleure compréhension des systèmes et des décisions.
                         <br />
                         <br />
-                        À mon avis, la compliance est un excellent terrain pour un développeur orienté “systèmes critiques” : elle demande rigueur, clarté, et une capacité à construire des outils fiables et auditables. Personnellement, je continue à renforcer cette compétence au quotidien à travers les modules KYC, les workflows de validation et l’amélioration de la qualité des données, avec l’objectif de contribuer à des systèmes de conformité plus robustes et plus industrialisés.
+                        À mon avis, la finance est un excellent terrain pour un développeur orienté “systèmes critiques” : elle demande rigueur, clarté, et une capacité à construire des outils fiables et auditables. Personnellement, je continue à renforcer cette compétence au quotidien à travers les modules finances, les workflows de validation et l’amélioration de la qualité des données, avec l’objectif de contribuer à des systèmes de conformité plus robustes et plus industrialisés.
                         <br />
                         <br />
                         Mon lien avec la finance est structuré et continu : académique, quantitatif, et orienté implémentation. Ce qui m’attire, c’est la finance “actionnable” : celle où l’on modélise, où l’on mesure, où l’on automatise, et où l’on sécurise la décision.
